// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correct message for multiple expenses with none hidden 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        £3.10
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button button--pink"
        to="/create"
      >
        Add expense
      </[object Object]>
    </div>
  </div>
</div>
`;

exports[`Should render correct message for single expense with two hidden 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        £1.00
      </span>
    </h1>
    <p
      className="page-header__subtitle"
    >
      (
      2
       hidden 
      expenses
       totalling 
      £2.10
       not showing)
    </p>
    <div
      className="page-header__actions"
    >
      <[object Object]
        className="button button--pink"
        to="/create"
      >
        Add expense
      </[object Object]>
    </div>
  </div>
</div>
`;
